welcome.lessons.welcome.array.island.Island.scala.error
island:6: error: type mismatch;
 found   : Unit
 required: Int
  }
  ^island:8: error: type mismatch;
 found   : Unit
 required: Int
    return 
    ^