welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var separation = indexOfValue(num, 0)
  if (separation != -1){
    var soustruc = new Array[Int](separation - 1)
    var soustruc2 = new Array[Int](num.length - separation )
  }
  else{
    return 
  }
}







def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
  for (i <- 0 to nums.length -1){
    if (nums(i) == lookingFor){
      return i
    }

  }
     return -1
}